fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ html{
 }
 body{
     overflow-x: hidden;
+    width: fit-content;
 }
 h5,h1{
     background-image: linear-gradient(-225deg, #231557 0%, #44107a 29%, #ff1361 67%, #fff800 100%);
